--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web local</title>
+    <title>Mentions légales</title>
 </head>
 <body>
-    <h1>TDs web</h1>
+    <h1>Édition du site</h1>
+    <p>Ce site (MaBoutique.fr) est édité par la société WEBAGENCY, SARL (société à responsabilité limitée) immatriculée au
+Registre du Commerce et des Sociétés de Caen sous le numéro RCS CAEN XXX YYY ZZZ, numéro de TVA Intra
+FR00501000000.</p>
+<p>Coordonnées : <strong>WebAgency</strong> SARL - 11 rue vide - 14000 Caen</p>
+    <h1>Hébergement</h1>
+    <p>Ce site est hébergé par la société ONLINE SAS, SAS (société par actions simplifiées) au capital de 214 410,50
+Euros, filiale du groupe Iliad, immatriculée au Registre du Commerce et des Sociétés de Paris sous le
+numéro RCS PARIS B 433 115 904, numéro de TVA FR35433115904.</p>
+    <p>Coordonnées : <strong>Online SAS</strong> - BP 438 - 75366 Paris Cedex 08</p>
+    <h1>Confidentialité</h1>
+    <p>Ce site ne collecte aucune donnée nominative à votre insu.</p>
+    <p>Comme la plupart des sites, nous collectons cependant des données relatives à la navigation de nos
+visiteurs, afin d'obtenir des statistiques précises liées à l'utilisation de ce service. Ces données incluent votre
+adresse IP, votre fournisseur d'accès à internet, le navigateur utilisé, ou encore l'heure de vos visites.</p>
+    <p>Si vous avez une question à propos de notre politique de confidentialité, merci de nous contacter par <a href="https://boutiquecigarette.fr/contact">email</a></p>
+    <h1>Cookies</h1>
+    
 </body>
 </html>
